--- a/src/app/personnels/manager-personnels/procedure-transfer-department/procedure-transfer-department.component.html
+++ b/src/app/personnels/manager-personnels/procedure-transfer-department/procedure-transfer-department.component.html
@@ -1,62 +1,4 @@
-<form style="padding-top: 25px" [formGroup]="formSearch">
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="form-item">
-        <div class="form-item-title">
-          Làm thủ tục chuyển đơn vị công tác
-        </div>
-        <div class="item-control">
-          <label>Phòng ban </label>
-          <select class="form-control" formControlName="department">
-            <option value="">---Quan tri mang va an ninh he thong</option>
-          </select>
-        </div>
-        <div class="item-control">
-          <label class="mgr-20" style="margin-right: 116px;">Nhập tên hoặc mã cán bộ để kiếm </label>
-          <input type="text" class="mgb-15 mgr-20" style="float: none;width: 50%" formControlName="nameOrCodePersonnel">
-          <button class="btn-action" (click)="onSearch()">Tìm kiếm</button>
-        </div>
-      </div>
-    </div>
-    <!---->
-
-    <!---->
-    <div class="col-xs-12">
-      <div class="table-responsive">
-        <table class="table table-bordered">
-          <thead>
-          <tr>
-            <th>STT</th>
-            <th>Mã cán bộ</th>
-            <th>Họ tên</th>
-            <th>Ngày sinh</th>
-            <th>Giới tính</th>
-            <th>Chức vụ</th>
-            <th>Chuyển</th>
-          </tr>
-          </thead>
-          <tbody>
-          <!---->
-
-          <tr>
-            <td>{{1}}</td>
-            <td>{{item.personnelCode}}</td>
-            <td>{{item.fullName}}</td>
-            <td>{{item.dateOfBirth}}</td>
-            <td>{{item.sex}}</td>
-            <td>{{item.position}}</td>
-            <td>
-              <button class="btn-action" (click)="choseItem(item)">Chọn</button>
-            </td>
-          </tr>
-
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-
-</form>
+<app-search-form title=" Làm thủ tục chuyển khoa phòng ban " (onChoise)="onChoiseHandler($event)"></app-search-form>
 
 <modal #modal size='lg' cssClass="my-modal-lg" backdrop="false">
 
@@ -73,40 +15,31 @@
           <h4 class="text-center mgt-5">Thông tin chi tiết </h4>
           <div class="item-control">
             <label>Mã cán bộ: </label>
-            <input type="text" required formControlName="personnelCode">
+            <input type="text" class="form-control" disabled required formControlName="personnelCode">
           </div>
 
           <div class="item-control">
             <label>Họ tên: </label>
-            <input type="text" required formControlName="fullName">
+            <input type="text"  class="form-control" disabled required formControlName="fullName">
           </div>
 
-          <div class="item-control">
-            <label>Ngày sinh: </label>
-            <input type="text" required formControlName="dateOfBirth">
-          </div>
-
-          <div class="item-control">
-            <label>Giới tính: </label>
-            <input type="text" required formControlName="sex">
-          </div>
 
           <div class="item-control">
             <label>Ngày chuyển : </label>
-            <input type="text" required formControlName="dateTransfer">
+            <input type="date" class="form-control" required formControlName="dateTransfer">
           </div>
 
           <div class="item-control">
             <label>Số quyết định : </label>
-            <input type="text" required formControlName="numberDecide">
+            <input type="text" class="form-control" required formControlName="numberDecide">
           </div>
           <div class="item-control">
             <label>Ngày quyết định : </label>
-            <input type="text" required formControlName="dateDecide">
+            <input type="date" class="form-control" required formControlName="dateDecide">
           </div>
           <div class="item-control">
-            <label>Đơn vị chuyển tới: </label>
-            <select class="form-control mgb-20" style="width: 80%" formControlName="unitTransfer">
+            <label>Khoa phòng ban chuyển tới: </label>
+            <select class="form-control mgb-20" style="width: 70%" formControlName="unitTransfer">
               <option value="">---Chọn----</option>
             </select>
           </div>
@@ -121,7 +54,7 @@
   </modal-body>
 
   <modal-footer>
-    <button class="btn-action" (click)="onProcess()">Ghi nhận </button>
+    <button class="btn-action" (click)="onProcess()">Ghi nhận</button>
   </modal-footer>
 
 </modal>
