--- a/src/app/personnels/manager-personnels/procedure-transfer-unit-work/procedure-transfer-unit-work.component.html
+++ b/src/app/personnels/manager-personnels/procedure-transfer-unit-work/procedure-transfer-unit-work.component.html
@@ -1,62 +1,5 @@
-<form style="padding-top: 25px" [formGroup]="formSearch">
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="form-item">
-        <div class="form-item-title">
-          Làm thủ tục chuyển đơn vị công tác
-        </div>
-        <div class="item-control">
-          <label>Phòng ban </label>
-          <select class="form-control" formControlName="department">
-            <option value="">---Quan tri mang va an ninh he thong</option>
-          </select>
-        </div>
-        <div class="item-control">
-          <label class="mgr-20 " style="margin-right: 116px;">Nhập tên hoặc mã cán bộ để kiếm </label>
-          <input type="text" class="mgb-15 mgr-20" style="float: none;width: 50%" formControlName="nameOrCodePersonnel">
-          <button class="btn-action" (click)="onSearch()">Tìm kiếm</button>
-        </div>
-      </div>
-    </div>
-    <!---->
+<app-search-form title="Làm thủ tục chuyển đơn vị công tác " (onChoise)="onChoiseHandler($event)"></app-search-form>
 
-    <!---->
-    <div class="col-xs-12">
-      <div class="table-responsive">
-        <table class="table table-bordered">
-          <thead>
-          <tr>
-            <th>STT</th>
-            <th>Mã cán bộ</th>
-            <th>Họ tên</th>
-            <th>Ngày sinh</th>
-            <th>Giới tính</th>
-            <th>Chức vụ</th>
-            <th>Chuyển</th>
-          </tr>
-          </thead>
-          <tbody>
-          <!---->
-
-          <tr>
-            <td>{{1}}</td>
-            <td>{{item.personnelCode}}</td>
-            <td>{{item.fullName}}</td>
-            <td>{{item.dateOfBirth}}</td>
-            <td>{{item.sex}}</td>
-            <td>{{item.position}}</td>
-            <td>
-              <button class="btn-action" (click)="choseItem(item)">Chọn</button>
-            </td>
-          </tr>
-
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-
-</form>
 
 <modal #modal size='lg' cssClass="my-modal-lg" backdrop="false">
 
@@ -64,64 +7,71 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(modal)">Thoát</button>
     </div>
+    <div *ngIf="message.condition  " [ngClass]="'alert alert-'+ message.type">
+      {{message.content}}
+    </div>
   </modal-header>
 
   <modal-body>
     <form action="" style="border: none" class="mgb-i-10" [formGroup]="formDetail">
       <div class="row">
         <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-            <h4 class="text-center mgt-5">Thông tin chi tiết </h4>
-            <div class="item-control">
-              <label>Mã cán bộ: </label>
-              <input type="text" required formControlName="personnelCode">
-            </div>
+          <h4 class="text-center mgt-5">Thông tin chi tiết </h4>
+          <div class="item-control">
+            <label>Mã cán bộ: </label>
+            <input type="text" class="form-control" disabled required formControlName="personnelCode">
+          </div>
 
-            <div class="item-control">
-              <label>Họ tên: </label>
-              <input type="text" required formControlName="fullName">
-            </div>
+          <div class="item-control">
+            <label>Họ tên: </label>
+            <input type="text" class="form-control" disabled  required formControlName="fullName">
+          </div>
 
-            <div class="item-control">
-              <label>Ngày sinh: </label>
-              <input type="text" required formControlName="dateOfBirth">
+          <div class="item-control">
+            <label>Số quyết định : </label>
+            <input type="text" class="form-control" required  #numberDecide formControlName="numberDecide">
+            <div class="error" *ngIf="numberDecide.value.trim()  =='' && formTouch">
+              Chưa nhập số quyết định
             </div>
+          </div>
+          <div class="item-control">
+            <label>Ngày quyết định : </label>
+            <input type="date" class="form-control" required #dateDecide formControlName="dateDecide">
+            <div class="error" *ngIf="dateDecide.value.trim()  =='' && formTouch">
+              Chưa nhập ngày quyết định
+            </div>
+          </div>
 
-            <div class="item-control">
-              <label>Giới tính: </label>
-              <input type="text" required formControlName="sex">
+          <div class="item-control">
+            <label>Ngày chuyển : </label>
+            <input type="date" class="form-control" required #dateTransfer formControlName="dateTransfer">
+            <div class="error" *ngIf="dateTransfer.value.trim()  =='' && formTouch">
+              Chưa nhập ngày chuyển
             </div>
+          </div>
 
-            <div class="item-control">
-              <label>Ngày chuyển : </label>
-              <input type="text" required formControlName="dateTransfer">
+          <div class="item-control">
+            <label>Đơn vị chuyển tới: </label>
+            <input type="text" class="form-control" required  #unitTransfer formControlName="unitTransfer">
+            <div class="error" *ngIf="unitTransfer.value.trim()  =='' && formTouch">
+              Chưa nhập đơn vị chuyển tới
             </div>
-
-            <div class="item-control">
-              <label>Số quyết định : </label>
-              <input type="text" required formControlName="numberDecide">
-            </div>
-            <div class="item-control">
-              <label>Ngày quyết định : </label>
-              <input type="text" required formControlName="dateDecide">
-            </div>
-            <div class="item-control">
-              <label>Đơn vị chuyển tới: </label>
-              <select class="form-control mgb-20" style="width: 80%" formControlName="unitTransfer">
-                <option value="">---Chọn----</option>
-              </select>
-            </div>
-            <div class="item-control ">
-              <label>Tóm tắt nột dung quyết định : </label>
-              <textarea class="form-control " style="max-width:100%;width: 100%;height: 150px"
-                        formControlName="contentDecide"> </textarea>
-            </div>
+          </div>
+          <div class="item-control ">
+            <label>Nội dung quyết định : </label>
+            <textarea class="form-control " style="max-width:100%;width: 100%;height: 150px"
+                      formControlName="contentDecide"> </textarea>
+          </div>
+          <div class="error" *ngIf="unitTransfer.value.trim()  =='' && formTouch">
+            Chưa nhập nột dung quyết định
+          </div>
         </div>
       </div>
     </form>
   </modal-body>
 
   <modal-footer>
-    <button class="btn-action" (click)="onProcess()">Ghi nhận </button>
+    <button class="btn-action" (click)="onProcess()">Ghi nhận</button>
   </modal-footer>
 
 </modal>
