--- a/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
+++ b/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
@@ -1,4 +1,4 @@
-<h4 class="text-center"> Danh mục khoa, phòng ban </h4>
+<h4 class="text-center mgb-15" style="font-size: 20px"> Danh mục khoa, phòng ban </h4>
 <div *ngIf="message.condition" [ngClass]="'alert alert-'+ message.type">
   {{message.content}}
 </div>
