--- a/src/app/personnels/manager-catalog/catalog-academic-rank/catalog-academic-rank.component.html
+++ b/src/app/personnels/manager-catalog/catalog-academic-rank/catalog-academic-rank.component.html
@@ -1,4 +1,4 @@
-<h4 class="text-center"> Danh mục học hàm </h4>
+<h4 class="text-center mgb-15" style="font-size: 20px"> Danh mục học hàm </h4>
 <div *ngIf="message.condition"
      [ngClass]="'alert alert-'+ message.type">
   {{message.content}}
