--- a/src/app/personnels/manager-personnels/add-personnel/add-personnel.component.html
+++ b/src/app/personnels/manager-personnels/add-personnel/add-personnel.component.html
@@ -48,7 +48,7 @@
       </div>
       <div class="item-control">
         <label>Nhập lại mật khẩu: </label>
-        <input type="password" required formControlName="rePassWord">
+        <input [type]="showPass == true?'text':'password'"  required formControlName="rePassWord">
       </div>
       <div class="action-form mgt-30 mgt-sm-50 text-center">
         <button (click)="onSubmit()" type="submit">Thêm mới</button>
