them sua xoa danh muc khoa phong ban, view chi tiet cua phong ban theo khoa

--- a/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.css
+++ b/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.css
@@ -1,3 +1,11 @@
 select{
   float: none !important;
 }
+tbody tr:hover {
+  background-color: #eae7df;
+  cursor: pointer;
+}
+
+tbody tr td{
+  word-break: break-all;
+}
