--- a/src/app/personnels/search-form/search-form.component.html
+++ b/src/app/personnels/search-form/search-form.component.html
@@ -1,4 +1,4 @@
-<form style="padding-top: 25px" action="">
+<form style="padding-top: 25px" action="" >
   <div class="row">
     <div class="col-xs-12">
       <div class="form-item">
@@ -42,7 +42,8 @@
           <td>{{data.username}}</td>
           <td>{{data.fullname}}</td>
           <td>{{data.organ?data.organ.level1.name:''}}</td>
-          <td>{{data.email}}</td>
+          <td style="word-break: break-word;width: 300px;max-width: 300px">{{data.email}}</td>
+          <!--<td style="word-break: break-word;width: 300px;max-width: 300px">{{data.email}}</td>-->
           <td *ngIf="showAction">
             <span class="action-icon" (click)="onEditShare()"><i class="fa fa-edit"></i></span>
             <span class="action-icon" (click)="onRemoveShare()"><i class="fa fa-remove "></i></span>
