hoan thanh thong ke can bo theo khoa phong ban

--- a/src/app/personnels/info-person/curriculum-vitae/curriculum-vitae.component.html
+++ b/src/app/personnels/info-person/curriculum-vitae/curriculum-vitae.component.html
@@ -53,7 +53,7 @@
             <select formControlName="sex" class="form-control" #sex type="select">
               <option value="1">Nam</option>
               <option value="2">Nữ</option>
-              <option value="2">Khác</option>
+              <!--<option value="2">Khác</option>-->
             </select>
 
             <div class="error" *ngIf="sex.value.trim()  =='' && formTouch">
