--- a/src/app/personnels/info-person/senimar-newpaper/senimar-newpaper.component.html
+++ b/src/app/personnels/info-person/senimar-newpaper/senimar-newpaper.component.html
@@ -45,7 +45,7 @@
                 <td>
                   <span class="action-icon" (click)="editItem('SENIMAR',item)"><i class="fa fa-edit"></i></span>
                   <span class="action-icon" (click)="removeItem('SENIMAR',i)"><i class="fa fa-remove "></i></span>
-                  <span class="action-icon"><i class="fa fa-lock"></i></span>
+                  <!--<span class="action-icon"><i class="fa fa-lock"></i></span>-->
                 </td>
               </tr>
               </tbody>
@@ -101,7 +101,7 @@
                 <td>
                   <span class="action-icon" (click)="editItem('NEWSPAPER',item)"><i class="fa fa-edit"></i></span>
                   <span class="action-icon" (click)="removeItem('NEWSPAPER',i)"><i class="fa fa-remove "></i></span>
-                  <span class="action-icon"><i class="fa fa-lock"></i></span>
+                  <!--<span class="action-icon"><i class="fa fa-lock"></i></span>-->
                 </td>
               </tr>
               </tbody>
