--- a/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
+++ b/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
@@ -80,7 +80,7 @@
 
           <div class="item-control" *ngIf="level.value == 1">
             <label>Địa chỉ website: </label>
-            <input name="url" formControlName="url" class="form-control" #name required
+            <input name="url" formControlName="url" class="form-control"
                    style="width: 100% !important;"/>
           </div>
 
