--- a/src/app/personnels/info-person/foreign/foreign.component.html
+++ b/src/app/personnels/info-person/foreign/foreign.component.html
@@ -37,7 +37,7 @@
           <td>
             <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
             <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
-            <span class="action-icon"><i class="fa fa-lock"></i></span>
+            <!--<span class="action-icon"><i class="fa fa-lock"></i></span>-->
           </td>
         </tr>
 
