--- a/src/app/components/tabs/tab-faculty/tab-faculty.component.html
+++ b/src/app/components/tabs/tab-faculty/tab-faculty.component.html
@@ -8,7 +8,7 @@
         >
           Khoa</a>
       <ul class="menu-child">
-        <li *ngFor="let item of faculty"><a [href]="item.href">{{item.name}}</a></li>
+        <li *ngFor="let item of faculty"><a [href]="item.url?item.url:''">{{item.name}}</a></li>
       </ul>
     </li>
 
@@ -17,7 +17,7 @@
     <li class="menu-wrapper">
       <a data-toggle="tab" href="#menu1">Phòng ban</a>
       <ul class="menu-child">
-        <li *ngFor="let item of departments"><a [href]="item.href">{{item.name}}</a></li>
+        <li *ngFor="let item of departments"><a [href]="item.url?item.url:''">{{item.name}}</a></li>
       </ul>
     </li>
 
