--- a/src/app/personnels/manager-personnels/add-personnel/add-personnel.component.html
+++ b/src/app/personnels/manager-personnels/add-personnel/add-personnel.component.html
@@ -13,6 +13,8 @@
                 (click)="level1Change(level1.value)">
           <option *ngFor="let item of listLevel1" [value]="item._id">{{item.name}}</option>
         </select>
+      </div>
+      <div class="item-control">
         <div class="error" *ngIf="level1.value.trim() == '' && formTouched">Chưa chọn đơn vị cấp 1</div>
       </div>
 
@@ -23,43 +25,74 @@
         </select>
       </div>
 
+
+
       <div class="item-control">
         <label>Mã cán bộ: </label>
         <input type="text" class="form-control" required formControlName="personnelCode" #personnelCode ngModel>
         <!--{{formData.forms.personnelCode.touched}}-->
+
+      </div>
+
+      <div class="item-control">
         <div class="error" *ngIf="personnelCode.value.trim() == '' && formTouched">Chưa nhập mã cán bộ</div>
         <div class="error" *ngIf="personnelCode.value.trim().length <6
          && formTouched && personnelCode.value.trim() != ''">Mã cán bộ tối thiểu 6 kí tự
         </div>
       </div>
+
       <div class="item-control">
         <label>Họ tên: </label>
         <input type="text" required class="form-control" #fullName formControlName="fullName">
+
+      </div>
+
+      <div class="item-control">
         <div class="error" *ngIf="fullName.value.trim() == '' && formTouched">Chưa nhập họ tên</div>
       </div>
+
       <div class="item-control">
         <label>Ngày sinh: </label>
         <input type="date" required class="form-control" #birthDay formControlName="birthDay">
+
+      </div>
+
+
+      <div class="item-control">
         <div class="error" *ngIf="birthDay.value.trim() == '' && formTouched">Chưa nhập ngày sinh</div>
       </div>
+
       <div class="item-control">
         <label>Giới tính : </label>
         <select name="sex" required class="form-control" #sex formControlName="sex">
           <option value="0">Nam</option>
           <option value="1">Nữ</option>
         </select>
+      </div>
+
+      <div class="item-control">
         <div class="error" *ngIf="sex.value.trim() == '' && formTouched">Chưa chọn giới tính</div>
       </div>
+
       <div class="item-control">
         <label>Email: </label>
         <input type="email" required pattern="^\w+([\.-_]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" class="form-control"
                #email formControlName="email">
+
+      </div>
+
+
+      <div class="item-control">
         <div class="error" *ngIf="!validEmail(email.value) && formTouched">Email phải đúng định abc@xx...</div>
       </div>
 
       <div class="item-control">
         <label>Mật khẩu: </label>
         <input [type]="showPass == true?'text':'password'" #passWord required formControlName="passWord">
+
+      </div>
+
+      <div class="item-control">
         <div class="error" *ngIf="passWord.value.trim() == '' && formTouched">Chưa nhập mật khẩu</div>
       </div>
 
@@ -70,13 +103,17 @@
 
       <div class="item-control">
         <label>Nhập lại mật khẩu: </label>
-        <input [type]="showPass == true?'text':'password'" (change)="rePassTouch = true" #rePassWord required
+        <input [type]="showPass == true?'text':'password'" (change)="rePassTouch = true" #rePassWord
                class="form-control" formControlName="rePassWord">
+      </div>
+
+      <div class="item-control">
         <div class="error"
              *ngIf="rePassTouch && passWord.value.trim() != '' && rePassWord.value!= passWord.value && formTouched">
           Mật khẩu không trùng nhau
         </div>
       </div>
+
       <div class="action-form mgt-30 mgt-sm-50 text-center">
         <button (click)="onSubmit()" type="submit">Thêm mới</button>
         <button (click)="resetForm(formData)">Xóa</button>
