--- a/src/app/personnels/manager-personnels/procedure-transfer-department/procedure-transfer-department.component.html
+++ b/src/app/personnels/manager-personnels/procedure-transfer-department/procedure-transfer-department.component.html
@@ -6,9 +6,6 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(modal)">Thoát</button>
     </div>
-    <div *ngIf="message.condition  " [ngClass]="'alert alert-'+ message.type">
-      {{message.content}}
-    </div>
   </modal-header>
 
   <modal-body>
@@ -28,6 +25,8 @@
           <div class="item-control">
             <label>Ngày chuyển : </label>
             <input type="date" class="form-control" required #dateTransfer formControlName="dateTransfer">
+          </div>
+          <div class="item-control">
             <div class="error" *ngIf="dateTransfer.value.trim()  =='' && formTouch">
               Chưa nhập ngày chuyển
             </div>
@@ -36,31 +35,63 @@
           <div class="item-control">
             <label>Số quyết định : </label>
             <input type="text" class="form-control" required #numberDecide formControlName="numberDecide">
+
+          </div>
+
+          <div class="item-control">
             <div class="error" *ngIf="numberDecide.value.trim()  =='' && formTouch">
               Chưa nhập số quyết định
             </div>
           </div>
+
           <div class="item-control">
             <label>Ngày quyết định : </label>
             <input type="date" class="form-control" required #dateDecide formControlName="dateDecide">
+
+          </div>
+
+          <div class="item-control">
             <div class="error" *ngIf="dateDecide.value.trim()  =='' && formTouch">
               Chưa nhập ngày quyết định
             </div>
           </div>
+
           <div class="item-control">
-            <label>Khoa/phòng ban chuyển tới: </label>
-            <select class="form-control mgb-20" style="width: 70%" required #unitTransfer formControlName="unitTransfer">
-              <option *ngFor="let item of listFaculty" [value]="item.name">{{item.name}}</option>
+            <label>Đơn vị cấp 1: </label>
+            <select class="form-control mgb-20" style="width: 70%" required #level1 formControlName="level1"
+                    (change)="level1Change(level1.value)">
+              <option *ngFor="let item of listLevel1" [value]="item._id">{{item.name}}</option>
             </select>
-            <div class="error" *ngIf="unitTransfer.value.trim()  =='' && formTouch">
-              Chưa chọn khoa/phòng ban chuyển tới
+          </div>
+
+          <div class="item-control">
+            <div class="error" *ngIf="level1.value.trim()  =='' && formTouch">
+              Chưa chọn đơn vị cấp 1 chuyển tới
             </div>
           </div>
+
+          <div class="item-control">
+            <label>Đơn vị cấp 2: </label>
+            <select class="form-control mgb-20" style="width: 70%" required #level2 formControlName="level2">
+              <option *ngFor="let item of listLevel2" [value]="item._id">{{item.name}}</option>
+            </select>
+
+          </div>
+
+          <div class="item-control">
+            <div class="error" *ngIf="level2.value.trim()  =='' && formTouch">
+              Chưa chọn đơn vị cấp 2 chuyển tới
+            </div>
+          </div>
+
+
           <div class="item-control ">
-            <label>Tóm tắt nột dung quyết định : </label>
+            <label>Nội dung quyết định : </label>
             <textarea class="form-control " style="max-width:100%;width: 100%;height: 150px"
                       #contentDecide required
                       formControlName="contentDecide"> </textarea>
+          </div>
+          <div class="item-control">
             <div class="error" *ngIf="contentDecide.value.trim()  =='' && formTouch">
               Chưa nhập nội dung quyết định
             </div>
@@ -71,6 +102,9 @@
   </modal-body>
 
   <modal-footer>
+    <div class="text-center" *ngIf="message.condition  " [ngClass]="'alert alert-'+ message.type">
+      {{message.content}}
+    </div>
     <button class="btn-action" (click)="onProcess()">Ghi nhận</button>
   </modal-footer>
 
