--- a/src/app/personnels/manager-system/manager-system.component.html
+++ b/src/app/personnels/manager-system/manager-system.component.html
@@ -1,9 +1,15 @@
-<p>
-  manager-system works!
-</p>
-<button (click)="getData(input.value)">getData</button>
-<input type="number" ngModel #input>
+<!--<p>-->
+  <!--manager-system works!-->
+<!--</p>-->
+<!--<button (click)="getData(input.value)">getData</button>-->
+<!--<input type="number" ngModel #input>-->
 
 
-<Button (click)="save()">Save</Button>
-{{(str)}}
+<!--<Button (click)="save()">Save</Button>-->
+<!--{{(str)}}-->
+
+<div class="row">
+  <div class="col-xs-12">
+    <router-outlet></router-outlet>
+  </div>
+</div>
