lam thu tuc tang luong

--- a/src/app/personnels/info-person/salary-brief/salary-brief.component.html
+++ b/src/app/personnels/info-person/salary-brief/salary-brief.component.html
@@ -141,7 +141,7 @@
           </div>
           <!---->
           <div class="item-control">
-            <label> Số quyết định {{salary}} </label>
+            <label> Số quyết định  </label>
             <input type="text" formControlName="numberDecide" required #numberDecide>
             <div class="error" *ngIf="numberDecide.value.trim()  =='' && formTouch">
               Chưa nhập số quyết định
